--- a/.github/workflows/build-deploy-recap.yml
+++ b/.github/workflows/build-deploy-recap.yml
@@ -3,7 +3,7 @@ name: build and publish reCAP website
 on: 
   push:
     branches:
-      - master
+      - main
     paths:
       - 'docs-dev/**'
 jobs:
@@ -38,4 +38,3 @@ jobs:
         commitMessage: "docs: re>≡CAP website"
         keepFiles: true
         emptyCommits: false
-
