--- a/docs/resources/sap/ui/core/manifest.json
+++ b/docs/resources/sap/ui/core/manifest.json
@@ -5,11 +5,7 @@
     "type": "library",
     "embeds": [],
     "applicationVersion": {
-<<<<<<< HEAD
-      "version": "1.81.2"
-=======
       "version": "1.88.0"
->>>>>>> master
     },
     "title": "The SAPUI5 Core Runtime.",
     "description": "The SAPUI5 Core Runtime.\n\n  Contains the UI5 jQuery plugins (jQuery.sap.*), the Core and all its components,\n  base classes for Controls, Components and the Model View Controller classes.",
@@ -301,10 +297,7 @@
   },
   "sap.ui": {
     "technology": "UI5",
-    "supportedThemes": [
-      "base",
-      "sap_hcb"
-    ]
+    "supportedThemes": ["base", "sap_hcb"]
   },
   "sap.ui5": {
     "dependencies": {
