--- a/docs-dev/ui5.yaml
+++ b/docs-dev/ui5.yaml
@@ -1,13 +1,13 @@
-specVersion: '1.0'
+specVersion: "1.0"
 metadata:
-  name: recap
+    name: recap
 type: application
 server:
-  customMiddleware:
-  - name: ui5-middleware-livereload
-    afterMiddleware: compression
-    configuration:
-      debug: true
-      ext: "xml,json,properties"
-      port: 35729
-      path: "webapp"
+    customMiddleware:
+        - name: ui5-middleware-livereload
+          afterMiddleware: compression
+          configuration:
+              debug: true
+              ext: "xml,json,properties,css"
+              port: 35729
+              path: "webapp"
