--- a/.github/workflows/build-deploy-recap.yml
+++ b/.github/workflows/build-deploy-recap.yml
@@ -1,14 +1,13 @@
 name: build and publish reCAP website
 
-on: 
+on:
   push:
     branches:
       - main
     paths:
-      - 'docs-dev/**'
+      - "docs-dev/**"
 jobs:
   build:
-
     runs-on: ubuntu-latest
 
     strategy:
@@ -16,25 +15,25 @@ jobs:
         node-version: [12.x]
 
     steps:
-    - uses: actions/checkout@v2
-    - name: use node ${{ matrix.node-version }}
-      uses: actions/setup-node@v1
-      with:
-        node-version: ${{ matrix.node-version }}
-    - name: build re>≡CAP website
-      run: |
-        cd docs-dev
-        npm i
-        npm run build
-      env:
-        CI: true
-    - name: deploy
-      uses: peaceiris/actions-gh-pages@v2
-      env:
-        ACTIONS_DEPLOY_KEY: ${{ secrets.actions_deploy_secret }}
-        PUBLISH_BRANCH: master
-        PUBLISH_DIR: ./
-      with:
-        commitMessage: "docs: re>≡CAP website"
-        keepFiles: true
-        emptyCommits: false
+      - uses: actions/checkout@v2
+      - name: use node ${{ matrix.node-version }}
+        uses: actions/setup-node@v1
+        with:
+          node-version: ${{ matrix.node-version }}
+      - name: build re>≡CAP website
+        run: |
+          cd docs-dev
+          npm i
+          npm run build
+        env:
+          CI: true
+      - name: deploy
+        uses: peaceiris/actions-gh-pages@v2
+        env:
+          ACTIONS_DEPLOY_KEY: ${{ secrets.actions_deploy_secret }}
+          PUBLISH_BRANCH: master
+          PUBLISH_DIR: ./
+        with:
+          commitMessage: "docs: re>≡CAP website"
+          keepFiles: true
+          emptyCommits: false
