--- a/.github/workflows/build-deploy-recap.yml
+++ b/.github/workflows/build-deploy-recap.yml
@@ -31,7 +31,7 @@ jobs:
         uses: peaceiris/actions-gh-pages@v2
         env:
           ACTIONS_DEPLOY_KEY: ${{ secrets.actions_deploy_secret }}
-          PUBLISH_BRANCH: master
+          PUBLISH_BRANCH: published-page
           PUBLISH_DIR: ./
         with:
           commitMessage: "docs: re>≡CAP website"
