ci: reenable docs git

--- a/.github/workflows/build-deploy-recap.yml
+++ b/.github/workflows/build-deploy-recap.yml
@@ -25,6 +25,7 @@ jobs:
           cd docs-dev
           npm i
           npm run build
+          ls -alR ../docs
         env:
           CI: true
       - name: deploy
