--- a/.github/workflows/build-deploy-recap.yml
+++ b/.github/workflows/build-deploy-recap.yml
@@ -5,7 +5,7 @@ on:
     branches:
       - main
     paths:
-      - "docs-dev/**"
+      - "static/**"
 jobs:
   build:
     runs-on: ubuntu-latest
